# libtinkerforge

./: .gitignore  AUTHORS  COPYING  ChangeLog  LICENSE  Makefile.am  README  README.md  configure.ac  description-pak  tinkerforge.pc.in
tinkerforge/: tinkerforge.h
